--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -81,7 +81,7 @@
   }
 
   function naytaKuva(tiedot) { // Näytetään vain kuva
-    if (tiedot.primaryImagesmall){
+    if (tiedot.primaryImageSmall){
     const teokset = document.getElementById('taideteokset');
     const kortti =  `
     <div class="col-md-4">
