--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Metropolitan Museum of Art Paintings</title>
+  <title>Metropolitan Museum of Art</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +14,6 @@
 
 <div class="p-5 bg-primary text-white text-center">
   <h1>The Metropolitan Museum of Art Collection</h1>
-  <p>Paintings</p>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -26,8 +25,10 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-4">
-      <h2>Sivuston esittely</h2>
+      <h2>Hae hakusanalla</h2>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <input type="text" id="hakusana" class="form-control" placeholder="">
+      <button id="haeTeokset" class="btn btn-primary mt-3">Hae</button>
       <hr class="d-sm-none">
     </div>
 
@@ -40,25 +41,34 @@
 </div>
      
 <script>
+  let hakusana = "";
+  let teoksetId = [];
+
+  function haeHakusanalla(hakusana){
   let teosId = [];
   fetch('https://collectionapi.metmuseum.org/public/collection/v1/search?q=paintings&hasImages=true')
     .then(function(response) {
       return response.json();
     })
     .then(function(data) {
-      teosId = data.objectIDs.slice(0, 10); 
-      satunnaisetTeokset(teosId); // Näytetään satunnaisia maalauksia
+      if (data.objectIDs){
+      teoksetId = data.objectIDs; // haetaan kaikki teokset hakusanalla
+      satunnaisetTeokset(teoksetID);
+      }else{
+        document.getElementById("taideteokset").innerHTML = "<p>Tietoa ei pystytä hakemaan</p>";
+      }
     })
     .catch(function(error) {
       console.error('Virhe tiedon hakemisessa:', error);
       document.getElementById("taideteokset").innerHTML = "<p>Tietoa ei pystytä hakemaan</p>";
     });
+  }
 
   function satunnaisetTeokset() {
     const teokset = document.getElementById('taideteokset');
     teokset.innerHTML = ''; 
 
-    const satunnaisID = satunnaisTeosID(teosId); 
+    const satunnaisID = satunnaisTeosID(teosId, 3); 
     satunnaisID.forEach(id => {
       fetch(`https://collectionapi.metmuseum.org/public/collection/v1/objects/${id}`)
         .then(function(response) {
@@ -75,9 +85,9 @@
     });
   }
 
-  function satunnaisTeosID() { // Haetaan 3 ensimmäistä satunnaista teosta
+  function satunnaisTeosID(teosId, maara) { // Haetaan 3 ensimmäistä satunnaista teosta
     const sekoitus = teosId.sort(() => 0.5 - Math.random());
-    return sekoitus.slice(0, 3);
+    return sekoitus.slice(0, maara);
   }
 
   function naytaKuva(tiedot) { // Näytetään vain kuva
@@ -94,12 +104,24 @@
       </div>
     </div>
   `;
-    teokset.innerHTML += kortti; // Lisää kuva konttiin
+    teokset.innerHTML += kortti; // Lisää kuva korttiin
   }
 }
 
+  document.getElementById('haeTeokset').addEventListener('click', function() {
+      hakusana = document.getElementById('hakusana').value; 
+      if (hakusana) {
+        haeTeoksetHakusanalla(hakusana); 
+     } else {
+        alert('Please enter a keyword!');
+      }
+    });
+
+
   document.getElementById('vaihdaTeokset').addEventListener('click', function() {
-    satunnaisetTeokset(); // Vaihda teokset
+    if (teoksetId.length > 0){
+      satunnaisetTeokset(teoksetId); 
+    }
   });
 </script>
       
