--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -7,8 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href="tyylit.css">
-
-
 </head>
 <body>
 
@@ -25,94 +23,86 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-4">
-      <h2>Hae hakusanalla</h2>
+      <h2>XXXX</h2>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <input type="text" id="hakusana" class="form-control" placeholder="">
-      <button id="haeTeokset" class="btn btn-primary mt-3">Hae</button>
       <hr class="d-sm-none">
     </div>
 
-<div class="col-sm-8">
-  <h2>Taideteokset inspiraation lähteenä</h2>
-  <div class="row" id="taideteokset"></div> 
-  <button id="vaihdaTeokset" class="btn btn-primary mt-3">Vaihda teokset</button>
-</div>
-</div>
+    <div class="col-sm-8">
+      <h2>Taideteokset inspiraation lähteenä</h2>
+      <div class="row" id="taideteokset"></div> 
+      <button id="vaihdaTeokset" class="btn btn-primary mt-3">Vaihda teokset</button>
+    </div>
+  </div>
 </div>
      
 <script>
   let teoksetId = [];
 
-  function haeHakusanalla(hakusana){
-  let teosId = [];
-  fetch('https://collectionapi.metmuseum.org/public/collection/v1/search?hasImages=true&q=paintings')
-    .then(function(response) {
-      return response.json();
-    })
-    .then(function(data) {
-      if (data.objectIDs && data.objectIDs.length > 0) {
-      teoksetId = data.objectIDs; 
-      satunnaisetTeokset(teoksetId);
-      }else{
-        document.getElementById("taideteokset").innerHTML = "<p>Tietoa ei pystytä hakemaan</p>";
-      }
-    })
-    .catch(function(error) {
-      console.error('Virhe tiedon hakemisessa:', error);
-      document.getElementById("taideteokset").innerHTML = "<p>Tietoa ei pystytä hakemaan</p>";
-    });
+  function haeTeokset() {
+    fetch('https://collectionapi.metmuseum.org/public/collection/v1/search?hasImages=true')
+      .then(response => response.json())
+      .then(data => {
+        if (data.objectIDs && data.objectIDs.length > 0) {
+          teoksetId = data.objectIDs; 
+          satunnaisetTeokset(teoksetId);
+        } else {
+          document.getElementById("taideteokset").innerHTML = "<p>Tietoa ei pystytä hakemaan.</p>";
+        }
+      })
+      .catch(error => {
+        console.error('Virhe tiedon hakemisessa:', error);
+        document.getElementById("taideteokset").innerHTML = "<p>Tietoa ei pystytä hakemaan.</p>";
+      });
   }
 
   function satunnaisetTeokset(teoksetId) {
     const teokset = document.getElementById('taideteokset');
-    teokset.innerHTML = ''; 
+    teokset.innerHTML = '';  // Tyhjennetään edelliset teokset
 
     const satunnaisId = satunnaisTeosId(teoksetId, 3); 
     satunnaisId.forEach(id => {
       fetch(`https://collectionapi.metmuseum.org/public/collection/v1/objects/${id}`)
-        .then(function(response) {
-          return response.json();
-        })
-        .then(function(tiedot) {
-          if (tiedot.objectName === 'Painting') { // Varmistetaan, että kyseessä on maalaus
+        .then(response => response.json())
+        .then(tiedot => {
+          // Varmistetaan, että kyseessä on maalaus ja että kuva on saatavilla
+          if (tiedot.objectName === 'Painting' && tiedot.primaryImageSmall) { 
             naytaKuva(tiedot);
           }
         })
-        .catch(function(error) { 
+        .catch(error => { 
           console.error('Virhe tiedon hakemisessa:', error);
         });
     });
   }
 
-  function satunnaisTeosId(teosId, maara) { // Haetaan 3 ensimmäistä satunnaista teosta
-    const sekoitus = teosId.sort(() => 0.5 - Math.random());
+  function satunnaisTeosId(teoksetId, maara) {
+    const sekoitus = teoksetId.sort(() => 0.5 - Math.random());
     return sekoitus.slice(0, maara);
   }
 
-  function naytaKuva(tiedot) { // Näytetään vain kuva
-    if (tiedot.primaryImageSmall){
+  function naytaKuva(tiedot) {
     const teokset = document.getElementById('taideteokset');
     const kortti =  `
-    <div class="col-md-4">
-      <div class="card">
-        <img src="${tiedot.primaryImageSmall}" class="card-img-top" alt="${tiedot.title}">
-        <div class="card-body">
-          <h5 class="card-title">${tiedot.title}</h5>
-          <p class="card-text">Tekijä: ${tiedot.artistDisplayName}</p>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="${tiedot.primaryImageSmall}" class="card-img-top" alt="${tiedot.title || 'Tuntematon'}">
+          <div class="card-body">
+            <h5 class="card-title">${tiedot.title || 'Tuntematon nimi'}</h5>
+            <p class="card-text">Tekijä: ${tiedot.artistDisplayName || 'Tuntematon'}</p>
+          </div>
         </div>
       </div>
-    </div>
-  `;
+    `;
     teokset.innerHTML += kortti; // Lisää kuva korttiin
   }
-}
-    window.onload = function() {
-        haeTeokset();
-      };
 
+  window.onload = function() {
+    haeTeokset();
+  };
 
   document.getElementById('vaihdaTeokset').addEventListener('click', function() {
-    if (teoksetId.length > 0){
+    if (teoksetId.length > 0) {
       satunnaisetTeokset(teoksetId); 
     }
   });
