--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -5,31 +5,55 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://bootswatch.com/5/sketchy/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href="tyylit.css">
 </head>
 <body>
 
 <div class="p-5 bg-primary text-white text-center">
-  <h1>The Metropolitan Museum of Art Collection</h1>
+  <h1>Taideteokset inspiraation lähteenä</h1>
+  <P>The Metropolitan Museum of Art Collection</P>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">MET Art Gallery</a>
+      <a class="navbar-brand" href="https://www.metmuseum.org/art/collection" target="_blank">MET Art Gallery</a>
+      <a class="navbar-brand" href="https://www.artists.fi/fi" target="_blank">Suomen Taiteilijaseura</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav"> 
+          </ul>
+      </div>
   </div>
 </nav>
+
+
 
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-4">
-      <h2>XXXX</h2>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <h2></h2>
+      <p>Tämä sivusto on tarkoitettu kuvataiteita harrastaville tai taiteesta kiinnostuneille, luovaan työhön, inspiraation lähteeksi, itsensä kehittämiseksi tai uuden oppimiseksi.
+       Sivusto käyttää The Metropolitan Museum of Art Collection
+       API:a ja arpoo The Metin kokoelmasta satunnaisia teoksia, joista voi etsiä inspiraatiota tai kuten taiteilijat ovat kautta aikojen tehneet ja 
+       kopioida vanhojen mestarien töitä oppimistarkoituksessa. 
+      <br/>
+      <br/>
+        Vaihda teokset - painikkeesta saat vaihdettua teokset uusiin teoksiin. Kuvien alta löytyvistä Lisätietoja-painikkeesta pääset kunkin teoksen omille sivuille.
+      
+      <br/>
+      <br/>
+      Muistathan, että yksityishenkilöillä on oikeus kopioida teoksia omaan käyttöönsä, mutta niiden myyminen tai levittäminen eteenpäin on kielletty. 
+      Lisätietoja tekijänoikeuksien rajoituksista voit lukea Suomen taiteilijaseuran sivuilta 
+      <a href="https://www.artists.fi/fi/taiteilijalle/kuinka-elaa-kuvataiteella/tekijanoikeuden-rajoitukset" target="_blank">täältä</a>
+      </p>
       <hr class="d-sm-none">
     </div>
 
     <div class="col-sm-8">
-      <h2>Taideteokset inspiraation lähteenä</h2>
       <div class="row" id="taideteokset"></div> 
       <button id="vaihdaTeokset" class="btn btn-primary mt-3">Vaihda teokset</button>
     </div>
