lisätty yhteydenottolomake naviin

--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -20,12 +20,11 @@
   <div class="container-fluid">
       <a class="navbar-brand" href="https://www.metmuseum.org/art/collection" target="_blank">MET Art Gallery</a>
       <a class="navbar-brand" href="https://www.artists.fi/fi" target="_blank">Suomen Taiteilijaseura</a>
+      <a class="navbar-brand" href="#palaute">Anna palauetta</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav"> 
-          </ul>
       </div>
   </div>
 </nav>
@@ -139,7 +138,7 @@
 
 
  <!-- Yhteydenottolomake -->
-<div class="container custom-mt" id="yhteyttä">
+<div class="container custom-mt" id="palaute">
   <div class="form-container d-flex flex-column align-items-center" style="margin-bottom: 6rem;">
     <h2>Anna palautetta!</h2>
     <p>Arvostamme, jos antaisit palautetta sivustostamme, jotta osaamme kehittää ideaa eteenpäin. Palaute annetaan nimettömänä.
