--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -18,13 +18,21 @@
 
 <nav class="navbar navbar-expand-sm">
   <div class="container-fluid">
-      <a class="navbar-brand" href="https://www.metmuseum.org/art/collection" target="_blank">MET Art Gallery</a>
-      <a class="navbar-brand" href="https://www.artists.fi/fi" target="_blank">Suomen Taiteilijaseura</a>
-      <a class="navbar-brand" href="#palaute">Anna palauetta</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="navbar-brand" href="https://www.metmuseum.org/art/collection" target="_blank">MET Art Gallery</a>
+              </li>
+              <li class="nav-item">
+                  <a class="navbar-brand" href="https://www.artists.fi/fi" target="_blank">Suomen Taiteilijaseura</a>
+              </li>
+              <li class="nav-item">
+                  <a class="navbar-brand" href="#palaute">Anna palautetta</a>
+              </li>
+          </ul>
       </div>
   </div>
 </nav>
@@ -41,7 +49,7 @@
        kopioida vanhojen mestarien töitä oppimistarkoituksessa. 
       <br/>
       <br/>
-        Vaihda teokset - painikkeesta saat vaihdettua teokset uusiin teoksiin. Kuvien alta löytyvistä Lisätietoja-painikkeesta pääset kunkin teoksen omille sivuille.
+        Vaihda teokset -painikkeesta saat vaihdettua teokset uusiin teoksiin. Kuvien alta löytyvistä Lisätietoja -painikkeesta pääset kunkin teoksen omille sivuille.
       
       <br/>
       <br/>
@@ -187,7 +195,7 @@
       
 <div class="mt-5 p-4 bg-dark text-white text-center">
   <div class="text-center p-3">
-    © 2024 MET Art Gallery | Powered by MET Collection API
+    © 2024 Digitekniikat - DIG007AS2A-3012 Hanna-Mari Kielenniva
   </div>
 </div>
 
